--- a/app/style.css
+++ b/app/style.css
@@ -14,11 +14,7 @@
   background: green;
 }
 
-.blue {
-  background: #3476d9;;
-}
-
-.red {
+.orange {
   background: orange;
 }
 
@@ -38,6 +34,7 @@
 .container-down {
   width: 100%;
   height: 250px;
+  overflow-y: auto;
 }
 
 hr.style-eight {
@@ -48,7 +45,7 @@ hr.style-eight {
     text-align: center;
 }
 hr.style-eight:after {
-    content: "§";
+    content: "§-§";
     display: inline-block;
     position: relative;
     top: -0.7em;
